samples/_failures_safe/1761274624_828b8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4348b92.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e4348b92.c:148:30: error: invalid initializer
  148 |         struct Token token = get_next_token
      |                              ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e4348b92.c:148:16: error: expected ‘,’ or ‘;’ at end of input
  148 |         struct Token token = get_next_token
      |                ^~~~~
./samples/SAFE/__tmp_e4348b92.c:148:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4348b92.c:148:16: error: expected declaration or statement at end of input
